5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1876_1292.log
== TEST (2019-07-03 18:36:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("x, y, z")))
mat = array([8, 3, 1],[5, 12, 10], [1, 3, 2])
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([8, 3, 1],[5, 12, 10], [1, 3, 2])
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array([8, 3, 1],[5, 12, 10], [1, 3, 2])
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("x, y, z")))
mat = array([[8, 3, 1],[5, 12, 10], [1, 3, 2]])
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("x, y, z")))
mat = array([[8, 3, 1],[5, 12, 10], [1, 3, 2]])
contador = shape(mat)[1]
day = n.T
fim = dot(mat,day)
for in range 
	ac = zeros(fim[:,j])

print(ac)
-- ERROR:
File "XXXX", line 8
    for in range 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("x, y, z")))
mat = array([[8, 3, 1],[5, 12, 10], [1, 3, 2]])
contador = shape(mat)[1]
day = n.T
fim = dot(mat,day)
for i range 
	ac = zeros(fim[:,j])

print(ac)
-- ERROR:
File "XXXX", line 8
    for i range 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:56:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("x, y, z")))
mat = array([[8, 3, 1],[5, 12, 10], [1, 3, 2]])
contador = shape(mat)[1]
day = n.T
fim = dot(mat,day)
for i in range 
	ac = zeros(fim[:,j])

-- ERROR:
File "XXXX", line 8
    for i in range 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
